Fix minor layout issues on studydocuments page

--- a/src/styles/filteredListPage.less
+++ b/src/styles/filteredListPage.less
@@ -3,7 +3,7 @@
 .filtered-list {
   min-height: 100%;
   display: grid;
-  grid-template-columns: 17em 1fr auto;
+  grid-template-columns: 19.25em 1fr auto;
 
   @media @tablet {
     grid-template-columns: 17em 1fr;
