--- a/src/styles/studydocList.less
+++ b/src/styles/studydocList.less
@@ -6,7 +6,8 @@
     width: 100%;
     font-size: 1em;
 
-    h2 {
+    h3 {
+      font-size: 1.2em;
       margin: 0;
       display: inline-block;
 
